--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "packet-transferring-visualization-project",
   "version": "1.0.0",
   "description": "Algorithms project that visualizes graph traversal",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.5.0"
   }
 }
